# Koishi

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  example.py  setup.py
examples/linearRegression/: lr.py  predict.py  save.txt  train.py
examples/logisticRegression/: data.py  describe.py  histogram.py  logreg_predict.py  logreg_train.py  lr.py  model.py  pair_plot.py  scatter_plot.py
includes/: color.h  utils.h
includes/initializer/: feed.h  fill.h  initializer.h  uniform.h
includes/operation/: addition.h  constant.h  cosine.h  count.h  exp.h  get.h  inverse.h  log.h  multiplication.h  number.h  numberException.h  operation.h  percentile.h  pow.h  reduction.h  sigmoid.h  sum.h  transformation.h  variable.h
includes/tensor/: shape.h  tensor.h  tensorException.h  tensorIndexException.h  tensorInterface.h  tensors.h
includes/wrapper/: wrapperTools.h
koishi/: __init__.py
sources/: main.cpp
sources/initializer/: feed.cpp  fill.cpp  initializer.cpp  uniform.cpp
sources/operation/: addition.cpp  constant.cpp  cosine.cpp  count.cpp  exp.cpp  get.cpp  inverse.cpp  log.cpp  multiplication.cpp  number.cpp  numberException.cpp  operation.cpp  percentile.cpp  pow.cpp  reduction.cpp  sigmoid.cpp  sum.cpp  transformation.cpp  variable.cpp
sources/tensor/: tensor.cpp  tensorException.cpp  tensorIndexException.cpp  tensorInterface.cpp  tensors.cpp
sources/wrapper/: wrapper.cpp  wrapperTools.cpp
